--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
+    <title>Jogo Crossing Road</title>
   </head>
   <body>
     <main>
@@ -13,7 +13,8 @@
     <script src="sketch.js"></script>
     <script src="imagens.js"></script>
     <script src="ator.js"></script>
-    <script src="carro.js"></script>
     <script src="p5.collide2d.js"></script>
+    <script src="carro.js"></script>
+
   </body>
 </html>
